# Arduino-7Segment

./: .gitignore  .gitmodules  BasicSegment.cpp  BasicSegment.h  CMakeLists.txt  README.md  SingleDigitSevenSegment.cpp  SingleDigitSevenSegment.h  TwoDigitSevenSegment.cpp  TwoDigitSevenSegment.h  buildAndTest.sh
test/: CMakeLists.txt  TestBasicSegment.cpp  TestSingleDigitSevenSegment.cpp
test/Placeholders/: Adafruit.h
